--- a/package.json
+++ b/package.json
@@ -5,5 +5,10 @@
   "main": "index.js",
   "repository": "https://github.com/jraleman/sample-shopify-app",
   "author": "jraleman <jraleman@bendiburg.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "next": "^10.0.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  }
 }
