--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   "repository": "https://github.com/jraleman/sample-shopify-app",
   "author": "jraleman <jraleman@bendiburg.com>",
   "license": "MIT",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
     "next": "^10.0.4",
     "react": "^17.0.1",
