--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@shopify/koa-shopify-auth": "^3.2.0",
+    "dotenv": "^8.2.0",
+    "isomorphic-fetch": "^3.0.0",
+    "koa": "^2.13.0",
+    "koa-session": "^6.1.0",
     "next": "^10.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
