--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@shopify/koa-shopify-auth": "^3.2.0",
+    "@shopify/polaris": "^5.12.0",
+    "@zeit/next-css": "^1.0.1",
     "dotenv": "^8.2.0",
     "isomorphic-fetch": "^3.0.0",
     "koa": "^2.13.0",
