--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "NODE_ENV=production node server.js next start"
   },
   "dependencies": {
+    "@shopify/app-bridge-react": "^1.28.0",
     "@shopify/koa-shopify-auth": "^3.2.0",
     "@shopify/polaris": "^5.12.0",
     "@zeit/next-css": "^1.0.1",
