--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
   "dependencies": {
     "@shopify/app-bridge-react": "^1.28.0",
     "@shopify/koa-shopify-auth": "^3.2.0",
+    "@shopify/network": "^1.6.0",
     "@shopify/polaris": "^5.12.0",
     "@zeit/next-css": "^1.0.1",
     "dotenv": "^8.2.0",
+    "dotenv-extended": "^2.9.0",
     "isomorphic-fetch": "^3.0.0",
-    "koa": "^2.13.0",
+    "koa": "^2.13.1",
     "koa-session": "^6.1.0",
-    "next": "^10.0.4",
+    "next": "^11.5.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
